--- a/vue-frontend/package.json
+++ b/vue-frontend/package.json
@@ -7,7 +7,10 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "vue": "^3.2.36"
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.1.3",
+    "vue": "^3.2.36",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
